ADBE Gain: $ 6.33 Win %: 61.00 in 13 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TS
ADBE Gain: $ 15.24 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5
ADBE Gain: $ 3.96 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP_DB10
ADBE Gain: $ 19.57 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR_DB10
ADBE Gain: $ 24.89 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV_DB10
ADBE Gain: $ 20.96 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL_DB10
ADBE Gain: $ -27.48 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP_DB10
ADBE Gain: $ 12.69 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR_DB10
ADBE Gain: $ 18.01 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV_DB10
ADBE Gain: $ 3.96 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP_DB10
ADBE Gain: $ 12.51 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL_DB10
ADBE Gain: $ 3.96 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP_DB10
ADBE Gain: $ 8.71 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_TR_IR3
ADBE Gain: $ 8.48 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_TR_TS
ADBE Gain: $ 5.54 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP
ADBE Gain: $ -0.87 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_QP_IR3
ADBE Gain: $ 15.24 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR
ADBE Gain: $ 20.56 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV
ADBE Gain: $ 16.63 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL
ADBE Gain: $ 5.04 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP
ADBE Gain: $ 12.21 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR
ADBE Gain: $ 8.5 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV
ADBE Gain: $ 1.87 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AL
ADBE Gain: $ 4.84 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP
ADBE Gain: $ 15.06 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL
ADBE Gain: $ 5.54 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP
ADBE Gain: $ 8.55 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_IT_TS
ADBE Gain: $ 3.17 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_AO_AC
ADBE Gain: $ 0.0 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_QP_PM
ADBE Gain: $ 8.48 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_AV_TS
ADBE Gain: $ 8.48 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_AL_TS
ADBE Gain: $ 13.96 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_RV
ADBE Gain: $ 8.71 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_IR3
ADBE Gain: $ 15.24 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_TR
ADBE Gain: $ 20.56 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_AV
ADBE Gain: $ 17.61 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_AL
ADBE Gain: $ 10.91 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_VI
ADBE Gain: $ 9.32 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_LI
ADBE Gain: $ 5.54 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_QP
ADBE Gain: $ 12.21 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_HM
ADBE Gain: $ 14.66 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_SS
ADBE Gain: $ 15.24 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_QL
ADBE Gain: $ 12.69 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_DB10
ADBE Gain: $ 14.4 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_AO
ADBE Gain: $ 5.84 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_AC
ADBE Gain: $ 15.06 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_IT
ADBE Gain: $ 0.0 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_PM
ADBE Gain: $ 8.48 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB5_OS5_CB5_CS5_TS
ADBE Gain: $ 10.36 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
ADBE Gain: $ 12.79 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
ADBE Gain: $ 22.09 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
ADBE Gain: $ 21.84 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
ADBE Gain: $ 6.48 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
ADBE Gain: $ 12.79 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
ADBE Gain: $ 22.09 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
ADBE Gain: $ 10.36 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
ADBE Gain: $ 15.56 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
ADBE Gain: $ 10.36 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
ADBE Gain: $ 7.62 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_IR3
ADBE Gain: $ 2.33 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_TS
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_QP
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QP_IR3
ADBE Gain: $ 7.62 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_TR
ADBE Gain: $ 13.89 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AV
ADBE Gain: $ 18.71 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AL
ADBE Gain: $ 0.87 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_QP
ADBE Gain: $ -17.43 Win %: 0 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_TR
ADBE Gain: $ 3.89 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_AV
ADBE Gain: $ -25.54 Win %: 0 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_AL
ADBE Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_QP
ADBE Gain: $ 11.6 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QL
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QP
ADBE Gain: $ 5.72 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_TS
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AO_AC
ADBE Gain: $ 4.85 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QP_PM
ADBE Gain: $ 0.63 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AV_TS
ADBE Gain: $ 4.05 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AL_TS
ADBE Gain: $ 10.63 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IR3
ADBE Gain: $ 7.62 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR
ADBE Gain: $ 13.89 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AV
ADBE Gain: $ 17.31 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AL
ADBE Gain: $ 8.82 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_VI
ADBE Gain: $ 8.86 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_LI
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QP
ADBE Gain: $ -15.88 Win %: 0 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_SS
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QL
ADBE Gain: $ 13.38 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_DB10
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AO
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AC
ADBE Gain: $ 11.6 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT
ADBE Gain: $ 11.27 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_PM
ADBE Gain: $ 2.33 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TS
ADBE Gain: $ 2.14 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR_QP_DB10
ADBE Gain: $ 10.61 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_TR_DB10
ADBE Gain: $ 24.04 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AV_DB10
ADBE Gain: $ 10.89 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AL_DB10
ADBE Gain: $ 4.56 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_QP_DB10
ADBE Gain: $ 3.73 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_TR_DB10
ADBE Gain: $ 17.16 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_AV_DB10
ADBE Gain: $ 4.65 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_QP_DB10
ADBE Gain: $ 10.14 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QL_DB10
ADBE Gain: $ 4.65 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QP_DB10
ADBE Gain: $ 3.6 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR_IR3
ADBE Gain: $ 0.56 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR_TS
ADBE Gain: $ 0.01 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR_QP
ADBE Gain: $ 2.52 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_QP_IR3
ADBE Gain: $ 6.38 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_TR
ADBE Gain: $ 14.96 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AV
ADBE Gain: $ 7.53 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AL
ADBE Gain: $ -3.22 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_QP
ADBE Gain: $ -0.95 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_TR
ADBE Gain: $ -0.73 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_AV
ADBE Gain: $ -2.96 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_AL
ADBE Gain: $ 0.81 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_QP
ADBE Gain: $ 10.01 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QL
ADBE Gain: $ 2.52 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QP
ADBE Gain: $ 4.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_TS
ADBE Gain: $ 9.66 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AO_AC
ADBE Gain: $ 5.8 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_QP_PM
ADBE Gain: $ 0.59 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AV_TS
ADBE Gain: $ -1.52 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AL_TS
ADBE Gain: $ 11.48 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV
ADBE Gain: $ 9.66 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IR3
ADBE Gain: $ 3.6 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR
ADBE Gain: $ 10.64 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AV
ADBE Gain: $ 1.95 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AL
ADBE Gain: $ 7.18 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_VI
ADBE Gain: $ 8.25 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_LI
ADBE Gain: $ 2.52 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_QP
ADBE Gain: $ 3.12 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM
ADBE Gain: $ 9.66 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_SS
ADBE Gain: $ 9.66 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_QL
ADBE Gain: $ 9.79 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_DB10
ADBE Gain: $ 9.66 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AO
ADBE Gain: $ 9.66 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AC
ADBE Gain: $ 10.01 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT
ADBE Gain: $ 7.7 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_PM
ADBE Gain: $ 3.86 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TS
ADBE Gain: $ 4.02 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_TR_QP_DB8
ADBE Gain: $ 7.14 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_TR_DB8
ADBE Gain: $ 20.6 Win %: 100.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_AV_DB8
ADBE Gain: $ 5.41 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_AL_DB8
ADBE Gain: $ 3.38 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_QP_DB8
ADBE Gain: $ 6.99 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM_TR_DB8
ADBE Gain: $ 20.6 Win %: 100.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM_AV_DB8
ADBE Gain: $ 3.67 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM_QP_DB8
ADBE Gain: $ -6.49 Win %: 0 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_IT_QL_DB8
ADBE Gain: $ 3.67 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_IT_QP_DB8
ADBE Gain: $ 4.12 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_TR_IR2
ADBE Gain: $ 4.22 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_TR_TS
ADBE Gain: $ 5.27 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_TR_QP
ADBE Gain: $ 1.11 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_QP_IR2
ADBE Gain: $ 4.37 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_TR
ADBE Gain: $ 14.07 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_AV
ADBE Gain: $ 3.96 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_AL
ADBE Gain: $ 0.82 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV_QP
ADBE Gain: $ 3.7 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM_TR
ADBE Gain: $ 22.49 Win %: 100.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM_AV
ADBE Gain: $ 6.84 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM_AL
ADBE Gain: $ 1.73 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM_QP
ADBE Gain: $ -10.43 Win %: 0 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_IT_QL
ADBE Gain: $ 1.11 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_IT_QP
ADBE Gain: $ 8.1 Win %: 100.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_IT_TS
ADBE Gain: $ 15.68 Win %: 100.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_AO_AC
ADBE Gain: $ -0.08 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_QP_PM
ADBE Gain: $ -2.08 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_AV_TS
ADBE Gain: $ 3.5 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_AL_TS
ADBE Gain: $ 1.62 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_RV
ADBE Gain: $ 3.15 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_IR2
ADBE Gain: $ 4.22 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_TR
ADBE Gain: $ 14.07 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_AV
ADBE Gain: $ 3.5 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_AL
ADBE Gain: $ 4.88 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_VI
ADBE Gain: $ 7.36 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_LI
ADBE Gain: $ 1.11 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_QP
ADBE Gain: $ 2.9 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_HM
ADBE Gain: $ 3.87 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_SS
ADBE Gain: $ -11.77 Win %: 0 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_QL
ADBE Gain: $ 4.39 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_DB8
ADBE Gain: $ 4.3 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_AO
ADBE Gain: $ 5.33 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_AC
ADBE Gain: $ 4.49 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_IT
ADBE Gain: $ -1.35 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_PM
ADBE Gain: $ 0.63 Win %: 50.00 in 2 days with algo TB4_HL_HS_QM_OB1_OS1_CB1_CS1_TS
ADBE Gain: $ 10.36 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
ADBE Gain: $ 12.79 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
ADBE Gain: $ 22.09 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
ADBE Gain: $ 21.84 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
ADBE Gain: $ 6.48 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
ADBE Gain: $ 12.79 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
ADBE Gain: $ 22.09 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
ADBE Gain: $ 10.36 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
ADBE Gain: $ 15.56 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
ADBE Gain: $ 10.36 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
ADBE Gain: $ 7.62 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_IR3
ADBE Gain: $ 2.33 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_TS
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR_QP
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QP_IR3
ADBE Gain: $ 7.62 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_TR
ADBE Gain: $ 13.89 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AV
ADBE Gain: $ 18.71 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_AL
ADBE Gain: $ 0.87 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV_QP
ADBE Gain: $ -17.43 Win %: 0 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_TR
ADBE Gain: $ 3.89 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_AV
ADBE Gain: $ -25.54 Win %: 0 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_AL
ADBE Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM_QP
ADBE Gain: $ 11.6 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QL
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_QP
ADBE Gain: $ 5.72 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT_TS
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AO_AC
ADBE Gain: $ 4.85 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QP_PM
ADBE Gain: $ 0.63 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AV_TS
ADBE Gain: $ 4.05 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AL_TS
ADBE Gain: $ 10.63 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_RV
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IR3
ADBE Gain: $ 7.62 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TR
ADBE Gain: $ 13.89 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AV
ADBE Gain: $ 17.31 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AL
ADBE Gain: $ 8.82 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_VI
ADBE Gain: $ 8.86 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_LI
ADBE Gain: $ -0.97 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QP
ADBE Gain: $ -15.88 Win %: 0 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_HM
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_SS
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_QL
ADBE Gain: $ 13.38 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_DB10
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AO
ADBE Gain: $ 8.21 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_AC
ADBE Gain: $ 11.6 Win %: 100.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_IT
ADBE Gain: $ 11.27 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_PM
ADBE Gain: $ 2.33 Win %: 50.00 in 2 days with algo TB3_OC_QM_OB1_OS1_CB5_CS5_TS
