ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_PM
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_PM
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_PM
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_PM
